--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href="{{ site.baseurl }}blog.html">BLOG</a></li>
         <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>-->
-        <li><a href="http://mrdeepakchauhan.github.io/resume">RESUME</a></li>
+        <li><a href="http://mrdeepakchauhan.github.io">RESUME</a></li>
       </ul>
     </div>
   </div>
